tests/specs/run/error_009_extensions_error/error_009_extensions_error.js.out
[WILDCARD]error: Uncaught (in promise) TypeError: Failed to construct 'Event': 1 argument required, but only 0 present
new Event();
^
    at [WILDCARD]
    at new Event (ext:deno_web/[WILDCARD])
    at [WILDCARD]
